# flairtool

./: CMakeLists.txt  flairhandler.cpp  flairhandler.h  main.cpp
